[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/game_won.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/select.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/cut.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/place.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/goal.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/jump.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/death.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/bg.wav" type="AudioStream" id=9]

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )

[node name="JumpAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 7 )

[node name="PlaceAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 5 )

[node name="CutAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 4 )

[node name="GoalAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 6 )

[node name="BGAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 9 )

[node name="DeathAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 8 )

[node name="WinAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 2 )

[node name="ActionAudio" type="AudioStreamPlayer" parent="." groups=["sound"]]
stream = ExtResource( 3 )
